[package]
name = "count-unsafe"
version = "0.1.0"
authors = ["Sanguk Park <efenniht@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.37"
clap = "3.0.0-beta.2"


[dependencies.rustc_parse]
package = "rustc-ap-rustc_parse"
version = "709.0.0"

[dependencies.rustc_ast]
package = "rustc-ap-rustc_ast"
version = "709.0.0"

[dependencies.rustc_session]
package = "rustc-ap-rustc_session"
version = "709.0.0"

[dependencies.rustc_span]
package = "rustc-ap-rustc_span"
version = "709.0.0"
